--- a/server/mysqlconnect.php.config
+++ b/server/mysqlconnect.php.config
@@ -1,6 +1,6 @@
 <?php
 
-$db = mysqliconnect('host','username','password','database',port);
+$db = mysqli_connect('host','username','password','database',port);
 
 if(mysqli_connect_error()){
 	exit(json_encode([ 'success'=>false, 'error'=>'cannot connect: '. mysqli_connect_error()]));
