--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/mixmstrmike/SGT#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "http": "0.0.0",
     "mysql": "^2.17.1"
   }
 }
